Add main page and Skeleton CSS

--- a/src/layout.ejs
+++ b/src/layout.ejs
@@ -8,9 +8,10 @@
             <%- include('./partials/nav') %>
         </nav>
         <main>
-            <%- body %>
+            <%- pageContents %>
         </main>
     </body>
+    <hr>
     <footer>
         <%- include('./partials/footer') %>
     </footer>
