--- a/src/partials/footer.ejs
+++ b/src/partials/footer.ejs
@@ -1,3 +1,4 @@
-<p>Robert Hull | Web Dev Portfolio</p>
-<p>This site was generated using a Node.js app found <a href="#">here.</a></p>
-<p>(last updated <%= dateTime %>)</p>
+<p>This site was generated using a Node.js app found 
+    <a href="#">here.</a> 
+    <em>(last updated <%= currentDateTime %>)</em>
+</p>
