--- a/src/partials/head.ejs
+++ b/src/partials/head.ejs
@@ -1,7 +1,11 @@
 <meta charset="UTF-8">
-<title><%= site.title %></title>
-<meta name="description" content="<%= site.description %>"/>
+<title><%= title %></title>
+<meta name="description" content="<%= description %>"/>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="theme-color" content="#16537e">
-<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
-<link rel="stylesheet" href="<%= site.basePath %>/public/assets/css/styles.css">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:400,700&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="./assets/css/normalize.css">
+<link rel="stylesheet" href="./assets/css/skeleton.css">
+<link rel="stylesheet" href="./assets/css/styles.css">
