--- a/src/partials/nav.ejs
+++ b/src/partials/nav.ejs
@@ -1,3 +1,3 @@
-<a href="./about">About</a> |
-<a href="./projects">Projects</a> |
-<a href="./contact">Contact</a> |
+<a class="nav-link" href="./about.html">About</a> |
+<a class="nav-link" href="./projects.html">Projects</a> |
+<a class="nav-link" href="./contact.html">Contact</a>
