Utilize rrssb and automate button display

--- a/src/partials/head.ejs
+++ b/src/partials/head.ejs
@@ -9,3 +9,4 @@
 <link rel="stylesheet" href="./assets/css/normalize.css">
 <link rel="stylesheet" href="./assets/css/skeleton.css">
 <link rel="stylesheet" href="./assets/css/styles.css">
+<link rel="stylesheet" href="./assets/css/rrssb.css">
