--- a/src/pages/main.ejs
+++ b/src/pages/main.ejs
@@ -1,57 +1,5 @@
-<!-- Main bio and summary -->
-<div class="row section">
-    <div class="offset-by-one three columns centered">
-        <img id="profile-pic" class="u-max-full-width" src="./assets/img/profile.png">
-        <h3><%= name %></h3>
-        <h6><strong>Full-Stack Web Developer</strong></h6>
-        <div id="contact-icon-list">
-            <a href="<%= email %>"><img src="./assets/svg/email.svg"></a>
-            <a href="<%= github %>"><img src="./assets/svg/github.svg"></a>
-            <a href="<%= linkedin %>"><img src="./assets/svg/linkedin.svg"></a>
-        </div>
-    </div>
-    <div class="offset-by-one seven columns">
-        <h2>About</h2>
-        <p><%= summary %></p>
-        <p>My full resume can be downloaded <a href="#">here</a>.</p>
-    </div>
-</div>
+<%- include('../partials/summary') %>
 <hr>
-
-<!-- List of personal projects -->
-<div class="section">
-    <% projects.forEach((project) => { %>
-        <div class="project-box">
-        <h4><%= project.name %></h4>
-        <a href="<%= project.repo %>">GitHub repo >></a>
-        <p><%= project.desc %></p>
-        <ul>
-            <% project.tools.forEach((tool) => { %>
-            <li class="tool"><%= tool %></li>
-            <% }) %>
-        </ul>
-        </div>
-    <% }) %>
-</div>
+<%- include('../partials/projects') %>
 <hr>
-
-<!-- Contact form -->
-<div class="section">
-    <form id="message-form">
-        <div class="row">
-            <div class="six columns">
-            <label for="nameInput">Your name</label>
-            <input class="u-full-width" type="text" placeholder="John Smith" id="nameInput">
-            <label for="emailInput">Your email</label>
-            <input class="u-full-width" type="email" placeholder="test@mailbox.com" id="emailInput">
-            </div>
-        </div>
-        <label for="messageInput">Message</label>
-        <textarea class="u-full-width" placeholder="Hi Robert …" id="messageInput"></textarea>
-        <label>
-            <input type="checkbox">
-            <span class="label-body">Send a copy to yourself</span>
-        </label>
-        <input class="button" type="submit" value="Submit">
-        </form>
-</div>
+<%- include('../partials/contact') %>
