--- a/src/partials/head.ejs
+++ b/src/partials/head.ejs
@@ -5,8 +5,8 @@
 <meta name="theme-color" content="#16537e">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Open+Sans:400,700&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="./assets/css/normalize.css">
-<link rel="stylesheet" href="./assets/css/skeleton.css">
-<link rel="stylesheet" href="./assets/css/styles.css">
-<link rel="stylesheet" href="./assets/css/rrssb.css">
+<link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&family=Open+Sans&display=swap" rel="stylesheet">
+<link rel="stylesheet" type="text/css" href="./assets/css/normalize.css">
+<link rel="stylesheet" type="text/css" href="./assets/css/skeleton.css">
+<link rel="stylesheet" type="text/css" href="./assets/css/styles.css">
+<link rel="stylesheet" type="text/css" href="./assets/css/rrssb.css">
