--- a/src/partials/summary.ejs
+++ b/src/partials/summary.ejs
@@ -5,6 +5,7 @@
         <img id="profile-pic" src="./assets/img/profile.png">
         <h3><%= name %></h3>
         <h6><%= occupation %></h6>
+        <h6><%= location %></h6>
     </div>
     <div class="eight columns">
         <p><%= summary %></p>
