--- a/src/partials/footer.ejs
+++ b/src/partials/footer.ejs
@@ -1,4 +1,4 @@
 <p>This site was generated using a Node.js app found 
-    <a href="#">here.</a> 
+    <a href="https://github.com/robertjhull/static-site-gen">here</a>. 
     <em>(last updated <%= currentDateTime %>)</em>
 </p>
