--- a/src/partials/projects.ejs
+++ b/src/partials/projects.ejs
@@ -1,12 +1,13 @@
 <!-- List of personal projects -->
 
 <div class="section">
+    <h4><u>Projects:</u></h4>
     <% projects.forEach((project) => { %>
         <div class="project-box">
-            <h4><%= project.name %></h4>
+            <h5><%= project.name %></h5>
             <a href="<%= project.repo %>">GitHub repo >></a>
             <p><%= project.desc %></p>
-            <p><%= project.tools.join(" • ") %></p>
+            <p><strong>Tools: </strong><%= project.tools.join(" • ") %></p>
         </div>
     <% }) %>
 </div>
