Implement in-browser editor with preview

--- a/src/layouts/default.ejs
+++ b/src/layouts/default.ejs
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en-US">
     <head>
-        <%- include('./partials/head') %>
+        <%- include('../partials/head') %>
     </head>
     <body>
         <nav>
-            <%- include('./partials/nav') %>
+            <%- include('../partials/nav') %>
         </nav>
         <main>
             <%- pageContents %>
@@ -13,6 +13,6 @@
     </body>
     <hr>
     <footer>
-        <%- include('./partials/footer') %>
+        <%- include('../partials/footer') %>
     </footer>
 </html>
