Add jQuery tabs, read JSON data to form

--- a/src/partials/head.ejs
+++ b/src/partials/head.ejs
@@ -8,5 +8,5 @@
 <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&family=Open+Sans&display=swap" rel="stylesheet">
 <link rel="stylesheet" type="text/css" href="./assets/css/normalize.css">
 <link rel="stylesheet" type="text/css" href="./assets/css/skeleton.css">
-<link rel="stylesheet" type="text/css" href="./assets/css/styles.css">
+<link rel="stylesheet" type="text/css" href="./assets/css/build.styles.css">
 <link rel="stylesheet" type="text/css" href="./assets/css/rrssb.css">
