Update styling & format

--- a/src/partials/contact.ejs
+++ b/src/partials/contact.ejs
@@ -1,6 +1,8 @@
 <!-- Contact form -->
 
 <div class="section">
+    <h5>Contact Me:</h5>
+    <br>
     <form id="message-form">
         <div class="row">
             <div class="six columns">
