--- a/src/partials/summary.ejs
+++ b/src/partials/summary.ejs
@@ -9,7 +9,7 @@
         <br>
     </div>
     <div class="eight columns">
-        <p><%= summary.summary %></p>
+        <p><%= summary.description %></p>
         <p><strong>Languages:</strong> JavaScript/TypeScript, Python, C++</p>
         <p><strong>Technologies/Frameworks:</strong> React, React-Redux, Node, Express, MongoDB, Flask, .NET Core, PostgreSQL, MySQL, Git</p>
         <%- include('./buttons') %>
