--- a/src/partials/head.ejs
+++ b/src/partials/head.ejs
@@ -1,5 +1,5 @@
 <meta charset="UTF-8">
-<title><%= title %></title>
+<title><%= summary.name %> | Portfolio</title>
 <meta name="description" content="<%= description %>"/>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="theme-color" content="#16537e">
