--- a/src/assets/css/editor.styles.css
+++ b/src/assets/css/editor.styles.css
@@ -1,7 +1,27 @@
-#tabs { margin-bottom: 2rem; }
-#tabs > div { height: 600px; }
+.pane {
+    height: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.darker {
+    background: #cccccc 50% 50% repeat-x;
+}
+
+#editor-main { height: 100vh; }
+#editor-form { width: 90%; }
+
+#tabs { 
+    margin-bottom: 2rem; 
+    background: transparent;
+    font-family: inherit;
+}
+#tabs > div { height: 615px; }
+#tabs > div label, #tabs > div > button { font-weight: 400; }
+#tabs > div input, button { font-family: inherit; }
 #tabs textarea { min-height: 150px; }
-#projects { overflow-y: scroll; }
 #tabs > ul > li {
     display: inline;
     display: inline-block;
@@ -16,23 +36,8 @@
     cursor: pointer;
 }
 
-#editor-main {
-    height: 100vh;
-}
-.pane {
-    height: 100%;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-.darker {
-    background-color:#cccccc;
-}
-#editor-form {
-    width: 90%;
-}
+#projects { overflow-y: scroll; }
+
 #preview-text { margin-bottom: 0; }
 #preview-window {
     font-size: 50%;
@@ -61,3 +66,5 @@ button.button-alt:focus {
   background-color: #db2e1e;
   border-color: #db2e1e; 
 }
+
+#add-project-btn, #delete-project-btn { margin: 0 2rem; }
