Adjust layout of EJS partials

--- a/src/partials/contact.ejs
+++ b/src/partials/contact.ejs
@@ -1,9 +1,9 @@
 <!-- Contact form -->
 
 <div class="section">
-    <h5>Contact Me:</h5>
-    <br>
     <form id="message-form">
+        <h5>Contact Me</h5>
+        <br>
         <div class="row">
             <div class="six columns">
                 <label for="nameInput">Your name</label>
@@ -14,10 +14,6 @@
         </div>
         <label for="messageInput">Message</label>
         <textarea class="u-full-width" placeholder="Hi Robert …" id="messageInput"></textarea>
-        <label>
-            <input type="checkbox">
-            <span class="label-body">Send a copy to yourself</span>
-        </label>
         <input class="button" type="submit" value="Submit">
     </form>
 </div>
