--- a/src/partials/head.ejs
+++ b/src/partials/head.ejs
@@ -1,6 +1,6 @@
 <meta charset="UTF-8">
 <title><%= summary.name %> | Portfolio</title>
-<meta name="description" content="<%= description %>"/>
+<meta name="description" content="<%= summary.occupation %>"/>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="theme-color" content="#16537e">
 <link rel="preconnect" href="https://fonts.googleapis.com">
