--- a/src/partials/projects.ejs
+++ b/src/partials/projects.ejs
@@ -1,13 +1,18 @@
 <!-- List of personal projects -->
 
 <div class="section">
-    <h5>Projects:</h5>
+    <h5>Projects</h5>
     <br>
     <% projects.forEach((project) => { %>
         <div class="project-box">
             <h6><a href="<%= project.repo %>"><%= project.name %></a></h6>
             <p><%= project.description %></p>
-            <p><strong>Tools: </strong><%= project.tools.join(" • ") %></p>
+            <p>
+                <%if (project.tools.length > 0) { %>
+                    <strong>Tools: </strong>
+                <% } %>
+                <%= project.tools.split(",").join(" • ") %>
+            </p>
         </div>
     <% }) %>
 </div>
