--- a/src/partials/contact.ejs
+++ b/src/partials/contact.ejs
@@ -1,9 +1,9 @@
 <!-- Contact form -->
 
-<div class="section">
+<div id="contact" class="section">
+    <h4>Contact Me</h4>
+    <br>
     <form id="message-form">
-        <h5>Contact Me</h5>
-        <br>
         <div class="row">
             <div class="six columns">
                 <label for="nameInput">Your name</label>
