--- a/src/partials/nav.ejs
+++ b/src/partials/nav.ejs
@@ -1,3 +1,1 @@
-<a class="nav-link" href="./about.html">About</a> |
-<a class="nav-link" href="./projects.html">Projects</a> |
-<a class="nav-link" href="./contact.html">Contact</a>
+<a class="nav-link" href="https://github.com/robertjhull/robertjhull.github.io">< To GitHub Repo</a>
