--- a/src/assets/css/skeleton.css
+++ b/src/assets/css/skeleton.css
@@ -121,12 +121,14 @@ are based on 10px sizing. So basically 1.5rem = 15px :) */
 html {
   font-size: 62.5%; }
 body {
-  font-size: 1.5em; /* currently ems cause chrome bug misinterpreting rems on body element */
+  font-size: 1.6em; /* currently ems cause chrome bug misinterpreting rems on body element */
   line-height: 1.6;
   font-weight: 400;
   background-color: #fafafa;
-  font-family: 'Open Sans', sans-serif !important;
-  color: #222; }
+  /* font-family: 'Open Sans', sans-serif !important; */
+  font-family: 'Merriweather', Georgia, serif !important;
+  /* color: #222; */
+  color: #555; }
 
 
 /* Typography
