Revert "Adjust layout & styling"
This reverts commit a3c6c59db0cb734495b7f3e203521796c7f2a5b7.

--- a/src/partials/contact.ejs
+++ b/src/partials/contact.ejs
@@ -7,9 +7,9 @@
         <div class="row">
             <div class="six columns">
                 <label for="nameInput">Your name</label>
-                <input class="u-full-width" type="text" placeholder="Full Name" id="nameInput">
+                <input class="u-full-width" type="text" placeholder="John Smith" id="nameInput">
                 <label for="emailInput">Your email</label>
-                <input class="u-full-width" type="email" placeholder="name@mail.com" id="emailInput">
+                <input class="u-full-width" type="email" placeholder="test@mailbox.com" id="emailInput">
             </div>
         </div>
         <label for="messageInput">Message</label>
