--- a/src/partials/nav.ejs
+++ b/src/partials/nav.ejs
@@ -1,4 +1,1 @@
-<a class="nav-link" href="https://github.com/robertjhull/robertjhull.github.io">&#129044; To GitHub Repo</a>
-<a class="nav-link disabled">
-    <strong><%= summary.name %></strong> | <%= summary.occupation %>
-</a>
+<a class="nav-link" href="https://github.com/robertjhull/robertjhull.github.io">< To GitHub Repo</a>
