--- a/src/assets/css/editor.styles.css
+++ b/src/assets/css/editor.styles.css
@@ -16,14 +16,12 @@
 #tabs { 
     margin-bottom: 2rem; 
     background: transparent;
+    font-family: inherit;
 }
 #tabs > div { height: 615px; }
 #tabs > div label, #tabs > div > button { font-weight: 400; }
-#tabs > div input, button { font-family: 'Open Sans', serif; }
-#tabs textarea { 
-    min-height: 150px;
-    font-family: 'Open Sans', serif;;
-}
+#tabs > div input, button { font-family: inherit; }
+#tabs textarea { min-height: 150px; }
 #tabs > ul > li {
     display: inline;
     display: inline-block;
@@ -45,7 +43,7 @@
     font-size: 50%;
     height: 90%;
     width: 90%;
-    border: 1px solid #222;
+    border: 1px solid black;
     background-color: #fafafa;
 }
 #preview-iframe {
