--- a/src/assets/css/build.styles.css
+++ b/src/assets/css/build.styles.css
@@ -1,3 +1,5 @@
+html { scroll-behavior: smooth; }
+
 h1, h2, h3, h4, h5, h6 { margin: 0; }
 
 nav {
@@ -43,6 +45,13 @@ a:hover { text-decoration: underline; }
     border-radius: 100%;
     width: 90px;
 }
+
+.rrssb-buttons {
+    display: flex;
+    justify-content: center;
+}
+
+.rrssb-buttons li { width: 100%; }
 
 .project-box { 
     border: 1px solid #55555550;
