--- a/src/partials/nav.ejs
+++ b/src/partials/nav.ejs
@@ -1,4 +1,10 @@
-<a class="nav-link" href="https://github.com/robertjhull/robertjhull.github.io">&#129044; To GitHub Repo</a>
-<a class="nav-link disabled">
-    <strong><%= summary.name %></strong> | <%= summary.occupation %>
-</a>
+<div id="nav-links">
+    <a class="nav-link disabled u-pull-left">
+        <strong><%= summary.name %></strong> | <%= summary.occupation %>
+    </a>
+    <ul class="u-pull-right">
+        <li><a class="nav-link" href="#summary">About</a></li> |
+        <li><a class="nav-link" href="#projects">Projects</a></li> |
+        <li><a class="nav-link" href="#contact">Contact</a></li>
+    </ul>
+</div>
